--- a/Information-System/src/main/resources/application.properties
+++ b/Information-System/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5434/optical_factory
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.flyway.baseline-on-migrate=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.enabled=true
